testimonial carousel made

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,3 +1,4 @@
-.home-page__main-container {
+.home-page__main-container,
+.home-page__services-container {
     background-color:rgb(28, 6, 43)
   }
