--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,5 +1,5 @@
 .home-page__main-container,
 .home-page__services-container,
 .home-page__contact-section {
-    background-color:rgb(28, 6, 43)
-  }
+  background-color: rgb(28, 6, 43);
+}
